added double buffer example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,18 +6,19 @@ project(learncuda LANGUAGES CXX CUDA)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+find_package(CUDAToolkit REQUIRED)
 
 # Find OpenCV package (ensure OpenCV is installed on your system)
 find_package(OpenCV REQUIRED)
 
-include_directories(${CUDA_INCLUDE_DIRS})
+include_directories(CUDA::toolkit)
 
 # Include OpenCV directories
 include_directories(${OpenCV_INCLUDE_DIRS})
 
-add_executable(learncuda main.cpp api.cu api.h)
+add_executable(learncuda main.cpp api.cu api.h buffer.cu)
 
 set_target_properties(learncuda PROPERTIES
         CUDA_SEPARABLE_COMPILATION ON)
 
-target_link_libraries(learncuda PRIVATE ${CUDA_LIBRARIES} ${OpenCV_LIBS})
+target_link_libraries(learncuda PRIVATE CUDA::cudart ${OpenCV_LIBS})
